--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.2.7
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==25.0
 pillow==11.3.0
